# options-signal-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: full-snapshot.md
app/: backtester.py  broker.py  config.py  data_provider.py  database.py  fundamental.py  greeks.py  indicators.py  iv_analysis.py  logging_config.py  main.py  market_regime.py  metrics.py  models.py  multi_leg.py  notifier.py  options_data.py  options_source.py  position_models.py  positions.py  put_call_ratio.py  report.py  security.py  server.py  signal_backtest.py  strategy_engine.py  symbol_discovery.py  synthetic_options.py  unusual_volume.py  utils.py  watchlist.py  watchlist_models.py  ws.py
app/ml/: __init__.py  features.py  llm_analyzer.py  pipeline.py  regime_classifier.py  signal_scorer.py
docs/: backtesting-data-sources.md  competitive-analysis.md  optopsy-api.md
tests/: test_backtester.py  test_broker.py  test_data_provider.py  test_fundamental.py  test_greeks.py  test_indicators.py  test_iv_analysis.py  test_market_regime.py  test_ml.py  test_multi_leg.py  test_notifier.py  test_observability.py  test_options_data.py  test_positions.py  test_put_call_ratio.py  test_security.py  test_server.py  test_signal_backtest.py  test_strategy_engine.py  test_symbol_discovery.py  test_unusual_volume.py  test_watchlist.py  test_ws.py
web/: .dockerignore  .env.example  .env.local  Dockerfile  package-lock.json  package.json
web/src/app/: ClientShell.tsx  layout.tsx  page.tsx
web/src/app/backtest/: page.tsx
web/src/app/broker/: page.tsx
web/src/app/compare/: page.tsx
web/src/app/discover/: page.tsx
web/src/app/fundamentals/: page.tsx
web/src/app/options/: page.tsx
web/src/app/positions/: page.tsx
web/src/app/put-call-ratio/: page.tsx
web/src/app/symbol/[symbol]/: page.tsx
web/src/app/unusual-volume/: page.tsx
web/src/app/watchlist/: page.tsx
web/src/components/: AppShell.tsx  ChartsSection.tsx  CompareSection.tsx  EmotionCacheProvider.tsx  HeroBanner.tsx  IndicatorsSection.tsx  MLSection.tsx  RegimeSection.tsx  SectionHeader.tsx  Sidebar.tsx  SignalsSection.tsx  ThemeProvider.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts  types.ts
