[project]
name = "options-signal-system"
version = "0.1.0"
description = "规则透明的期权交易信号系统 — 输出清晰信号，不做自动下单"
readme = "README.md"
authors = [{ name = "Jeremy Gu" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyarrow>=17.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.1",
    "typer>=0.12",
    "optopsy>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.24", "black>=24.0", "mypy>=1.11", "pandas-stubs>=2.2", "types-requests>=2.31"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["optopsy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
]
